# read-notes

./: Makefile  mkdocs.yml
docs/: README.md
docs/adl2024/: README.md
docs/articles/methodology/: 50个让生活更美好的建议.md  README.md  To Be A Great Programmer: Mindset And Learning Strategy.md  从一个疯狂下载者变成学习者.md  如何才能过好自己的一生？.md  成为一名优秀的程序员：心智模型和学习策略.md  男人应该选一个什么样的女人相伴终身？.md  那些编程水平很高的程序员是怎么训练出来的.md
docs/cpp-concurrency-in-action/: Makefile  README.md
docs/cpp-concurrency-in-action/src/chap1/: first_example.cpp
docs/cpp-concurrency-in-action/src/chap2/: class_method_thread.cpp  func_header.hpp  functor_thread.cpp  thread_dangling_reference.cpp  thread_owership.cpp
docs/cs106L/: Makefile  README.md
docs/cs106L/src/Cast/: const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp
docs/cs106L/src/Containers/: array_op.cpp  deque_op.cpp  forward_list_op.cpp  list_op.cpp  map_op.cpp  min_heap_priority_queue.cpp  priority_queue_op.cpp  queue_op.cpp  set_op.cpp  stack_op.cpp  vector_iterator.cpp
docs/cs106L/src/Functors/: functor.cpp  functor_member_variable.cpp  functor_paramter.cpp  predefined_functor.cpp
docs/cs106L/src/Iterators/: bidirectional_iterator.cpp  (+2 more)
docs/css/: extra.css
docs/deep-learning-from-scratch/: README.ipynb
docs/goruntime/: Makefile  README.md  gom  gom_sh.sh  point.go
docs/multithreaded-programming-guide/: CMakeLists.txt  Makefile  README.md
docs/multithreaded-programming-guide/src/: mutex_share.c  pthread_attr_setguardsize.c  pthread_attr_setscope.c  pthread_cancel.c  pthread_cleanup_push.c  pthread_create.c  pthread_default_attr.c  pthread_detach.c  pthread_exit.c  pthread_mutex_recursive.c  pthread_mutex_setprioceiling.c  pthread_mutexattr_setrobust.c  pthread_prio_inherit.c  pthread_setaffinity_np.c  pthread_setschedparam.c
docs/ostep/: README.md
docs/the-art-of-multiprocessor-programming/: README.md
docs/the-distant-savior/: README.md
docs/the-math-of-deeplearn/: README.md
docs/unp-v1/: Makefile  README.md  udpcli_multicast  udpcli_multicasttest  udpclibcast1  udpclibcast5  udpclicast1
docs/write-a-hash-table/: README.md
docs/x86-assembly-language/: README.md  mac_install_bochs.md
overrides/partials/: comments.html
(+37 files in other folders)
